<resources>
    <string name="app_name">RemotePlayerClient</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="prev"><![CDATA[<| Prev]]></string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="next"><![CDATA[Next |>]]></string>
    <string name="get_file">Send file</string>
    <string name="configuration">Configuration</string>
    <string name="chooseFile">Choose file first</string>
    <string name="volumePlus">+</string>
    <string name="volumeMinus">-</string>
    <string name="backward"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
</resources>
