<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cba.piterpti.pl.remoteplayerclient.fragment.PlayerFragment"
    android:orientation="vertical"
    android:weightSum="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_weight="1">

            <Button
                android:id="@+id/main_pause"
                android:text="@string/pause"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff700"
                />

            <Button
                android:id="@+id/main_stop"
                android:text="@string/stop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ff0004"/>


            <Button
                android:id="@+id/main_play"
                android:text="@string/play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#09b600"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_weight="1"
            android:background="#eee">

            <Button
                android:id="@+id/main_prev"
                android:text="@string/prev"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000"
                android:textColor="#aaa"
                android:layout_margin="3dp"/>


            <Button
                android:id="@+id/main_next"
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000"
                android:textColor="#aaa"
                android:layout_margin="3dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/main_getFileBtn"
            android:text="@string/get_file"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#aa4400"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/main_send"
            android:text="@string/send"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#aa8800"
            android:layout_weight="1"/>

    <Button
        android:id="@+id/main_config"
        android:text="@string/configuration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#aaaa00"
        android:layout_weight="1"/>

        <TextView
            android:id="@+id/main_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#fff"/>

</LinearLayout>
